tried to fix bugs on mobile

--- a/cssFiles/style.css
+++ b/cssFiles/style.css
@@ -107,3 +107,10 @@ html{
         font-size: 50%;
     }
 }
+
+@media(max-width:380px){
+    html{
+        font-size: 40%;
+    }
+
+}
